// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"TextArea" renders 1`] = `
.emotion-1 {
  background: rgb(237,237,238);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-0 {
  background: #fff;
  border: none;
  border-radius: 4px;
  box-shadow: 0 0 0 1px #696c6e;
  caret-color: #0772de;
  color: rgb(29,30,31);
  font-weight: 300;
  line-height: 24px;
  margin: 0 0 16px;
  outline: none;
  padding: 16px 16px;
  resize: none;
  width: 100%;
}

.emotion-0::-moz-placeholder {
  color: rgb(80,82,84);
  font-size: 11px;
  text-transform: none;
  opacity: 1;
}

.emotion-0::-ms-input-placeholder {
  color: rgb(80,82,84);
  font-size: 11px;
  text-transform: none;
}

.emotion-0::-webkit-input-placeholder {
  color: rgb(80,82,84);
  font-size: 11px;
  text-transform: none;
}

.emotion-0:focus {
  box-shadow: 0 0 0 1px #0772de;
}

.emotion-0:invalid {
  box-shadow: 0 0 0 1px #696c6e;
}

<div
  className="emotion-1"
>
  <textarea
    className="textarea emotion-0"
  >
    TextArea
  </textarea>
</div>
`;

exports[`"TextArea" renders as disabled 1`] = `
.emotion-1 {
  background: rgb(237,237,238);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-0 {
  background: rgba(71,73,75,0.16000000000000003);
  border: none;
  border-radius: 4px;
  box-shadow: 0 0 0 1px #696c6e;
  caret-color: #0772de;
  color: rgb(29,30,31);
  font-weight: 300;
  line-height: 24px;
  margin: 0 0 16px;
  outline: none;
  padding: 16px 16px;
  resize: none;
  width: 100%;
}

.emotion-0::-moz-placeholder {
  color: rgb(80,82,84);
  font-size: 11px;
  text-transform: none;
  opacity: 1;
}

.emotion-0::-ms-input-placeholder {
  color: rgb(80,82,84);
  font-size: 11px;
  text-transform: none;
}

.emotion-0::-webkit-input-placeholder {
  color: rgb(80,82,84);
  font-size: 11px;
  text-transform: none;
}

.emotion-0:focus {
  box-shadow: 0 0 0 1px #0772de;
}

.emotion-0:invalid {
  box-shadow: 0 0 0 1px #696c6e;
}

<div
  className="emotion-1"
>
  <textarea
    className="textarea emotion-0"
    disabled={true}
  >
    TextArea
  </textarea>
</div>
`;

exports[`"TextArea" renders as invalid 1`] = `
.emotion-1 {
  background: rgb(237,237,238);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-0 {
  background: #fff;
  border: none;
  border-radius: 4px;
  box-shadow: 0 0 0 1px #e02020;
  caret-color: #0772de;
  color: rgb(29,30,31);
  font-weight: 300;
  line-height: 24px;
  margin: 0 0 16px;
  outline: none;
  padding: 16px 16px;
  resize: none;
  width: 100%;
}

.emotion-0::-moz-placeholder {
  color: rgb(80,82,84);
  font-size: 11px;
  text-transform: none;
  opacity: 1;
}

.emotion-0::-ms-input-placeholder {
  color: rgb(80,82,84);
  font-size: 11px;
  text-transform: none;
}

.emotion-0::-webkit-input-placeholder {
  color: rgb(80,82,84);
  font-size: 11px;
  text-transform: none;
}

.emotion-0:focus {
  box-shadow: 0 0 0 1px #0772de;
}

<div
  className="emotion-1"
>
  <textarea
    className="textarea emotion-0"
  >
    TextArea
  </textarea>
</div>
`;

exports[`"TextArea" renders with placeholderTextTransform 1`] = `
.emotion-1 {
  background: rgb(237,237,238);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-0 {
  background: #fff;
  border: none;
  border-radius: 4px;
  box-shadow: 0 0 0 1px #696c6e;
  caret-color: #0772de;
  color: rgb(29,30,31);
  font-weight: 300;
  line-height: 24px;
  margin: 0 0 16px;
  outline: none;
  padding: 16px 16px;
  resize: none;
  width: 100%;
}

.emotion-0::-moz-placeholder {
  color: rgb(80,82,84);
  font-size: 11px;
  text-transform: uppercase;
  opacity: 1;
}

.emotion-0::-ms-input-placeholder {
  color: rgb(80,82,84);
  font-size: 11px;
  text-transform: uppercase;
}

.emotion-0::-webkit-input-placeholder {
  color: rgb(80,82,84);
  font-size: 11px;
  text-transform: uppercase;
}

.emotion-0:focus {
  box-shadow: 0 0 0 1px #0772de;
}

.emotion-0:invalid {
  box-shadow: 0 0 0 1px #696c6e;
}

<div
  className="emotion-1"
>
  <textarea
    className="textarea emotion-0"
    placeholder="TextArea"
  >
    TextArea
  </textarea>
</div>
`;
